syntax = "proto3";

package auth;

option go_package = "hr-app-diploma-backend/auth-service/proto";

service AuthService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  int32 user_id = 1;
  bool valid = 2;
}
